ec2.tf
# key-pair
resource "aws_key_pair" "key-pair" {
  key_name = "terraform-jenkins"
  public_key = file("terraform-key-ec2.pub")
}

# VPC 
resource "aws_default_vpc" "default" {
  
}

# Security Group 
resource "aws_security_group" "security-group" {
  name = "security-group"
  description = "security group generated by terraform"
  vpc_id = aws_default_vpc.default.id

    # port for ssh 
  ingress{
    from_port = 22
    to_port = 22
    protocol = var.protocol
    cidr_blocks = var.cidr-public
    description = "SSH PORT"
  }

  # http
  ingress{
    from_port = 80
    to_port = 80
    protocol = var.protocol
    cidr_blocks = var.cidr-public
    description = "HTTP PORT"
  }

  # https
  ingress{
    from_port = 443
    to_port = 443
    protocol = var.protocol
    cidr_blocks = var.cidr-public
    description = "HTTPS PORT"
  }

  # jenkins
#   ingress{
#     from_port = 8080
#     to_port = 443
#     protocol = var.protocol
#     cidr_blocks = var.cidr-public
#     description = "JENKINS PORT"
#   }

  egress {
    from_port = 0
    to_port = 0
    protocol = -1
    cidr_blocks = var.cidr-public
    description = "ALL access outbound"
  }

tags = {
  name = "security-group"
}

}

## EC2 Instance 
resource "aws_instance" "terraform-jenkins" {
  key_name = aws_key_pair.key-pair.key_name
  ami = var.ami
  vpc_security_group_ids = [aws_security_group.security-group.id]
  instance_type = var.instance-type
  user_data = file("./shell-script/nginx.sh")
  root_block_device {
    volume_size = var.volume-size
    volume_type = "gp3"
  }
  tags ={
    name = "terraform-jenkins"
  }
}
